# docs/swagger.yaml
@@ -284,7 +284,7 @@ info:
   contact:
     email: ricardobenthem@gmail.com
     name: Ricardo
-  description: This is the admin API for the Urchin app.
+  description: This is the admin API for the GoCMS app.
   license:
     name: MIT
   title: GoCMS Admin API
@@ -453,7 +453,7 @@ paths:
             $ref: '#/definitions/common.ErrorResponse'
       summary: Add a new post
       tags:
-      - posts
+      - cards
   /cards/{schema}:
     get:
       description: Retrieves a paginated list of cards by schema UUID.
@@ -480,7 +480,7 @@ paths:
             $ref: '#/definitions/common.ErrorResponse'
       summary: Get a card list
       tags:
-      - posts
+      - cards
   /images:
     post:
       consumes:
@@ -540,17 +540,51 @@ paths:
       tags:
       - images
   /pages:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves a paginated list of pages.
+      parameters:
+      - default: 0
+        description: Pagination offset
+        in: query
+        name: offset
+        type: integer
+      - default: 0
+        description: Pagination limit (0 means no limit)
+        in: query
+        name: limit
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of pages
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Invalid offset or limit parameter
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "500":
+          description: Server error
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+      summary: Get a list of pages
+      tags:
+      - pages
     post:
       consumes:
       - application/json
       description: Adds a new page to the database.
       parameters:
-      - description: Page to Update
+      - description: Page to add
         in: body
         name: page
         required: true
         schema:
-          $ref: '#/definitions/admin_app.ChangePageRequest'
+          $ref: '#/definitions/admin_app.AddPageRequest'
       produces:
       - application/json
       responses:
@@ -563,6 +597,58 @@ paths:
           schema:
             $ref: '#/definitions/common.ErrorResponse'
       summary: Add a new page
+      tags:
+      - pages
+    put:
+      consumes:
+      - application/json
+      description: Updates an existing page with new data.
+      parameters:
+      - description: Page data to update
+        in: body
+        name: post
+        required: true
+        schema:
+          $ref: '#/definitions/admin_app.ChangePageRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin_app.PostIdResponse'
+        "400":
+          description: Invalid request body or could not change page
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+      summary: Update an existing page
+      tags:
+      - pages
+  /pages/{link}:
+    delete:
+      description: Deletes a page by its Link.
+      parameters:
+      - description: Page Link
+        in: path
+        name: link
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/admin_app.DeletePageRequest'
+        "400":
+          description: Invalid link provided
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+        "404":
+          description: Page not found
+          schema:
+            $ref: '#/definitions/common.ErrorResponse'
+      summary: Delete a page
       tags:
       - pages
   /posts:
@@ -675,32 +761,6 @@ paths:
       tags:
       - posts
   /posts/{id}:
-    delete:
-      description: Deletes a page by its Link.
-      parameters:
-      - description: Page Link
-        in: path
-        name: link
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/admin_app.DeletePageRequest'
-        "400":
-          description: Invalid link provided
-          schema:
-            $ref: '#/definitions/common.ErrorResponse'
-        "404":
-          description: Page not found
-          schema:
-            $ref: '#/definitions/common.ErrorResponse'
-      summary: Delete a page
-      tags:
-      - pages
     get:
       description: Retrieves a single post by its ID.
       parameters:
